...
      resetTravelTimes();

      // Calculate travel times
      fetchAllTravelTimes(start, pointLocation);

      // Track the event
      trackEvent("Set Destination", {
        name: pointName,
        type: selectedPoi ? "POI" : "Building",
      });
      return;
    }

    // Set as start point
    setStart(pointLocation);
    setStartPosition(pointName);
    trackEvent("Set Start", {
      name: pointName,
      type: selectedPoi ? "POI" : "Building",
    });
  };
  // Updated handleGetDirections function
  const handleGetDirections = () => {
...
      } else {
        // Nothing selected
        return;
      }

      // Set up route
      trackEvent("Get Directions", {
        selected: pointName,
        type: selectedPoi ? "POI" : "Building",
      });
      console.log("Event tracked");

      setIsRoute(true);
...
                    </Text>
                  )}
                  <NavigationIcon />
                </View>
              </TouchableHighlight>
              <TouchableHighlight
                testID="get-directions"
                style={[
                  styles.shadow,
                  { backgroundColor: theme.backgroundColor },
                ]}
                className="rounded-xl p-4 bg-primary-red"
                onPress={handleGetDirections}
...
