...
        className="flex flex-row justify-between w-80 p-4 bg-white rounded-3xl"
      >
        <TextInput
          onSubmitEditing={handleSubmit}
          value={searchText}
          onChangeText={setSearchText}
          placeholder="Search the campus"
          className="color-slate-400 w-5/6"
        />
        <SearchIcon />
      </View>
    </View>
  );
...
