...

          <TouchableOpacity
            className="mt-5"
            onPress={() => handleGuestLogin(navigation)}
          >
            <Text className="text-[#1A73E8] text-lg font-medium underline">
              Continue as Guest
            </Text>
          </TouchableOpacity>
        </View>
      </Animated.View>
    </View>
  );
...
