...
      {/* POI Filter Button */}
      <View
        testID="poi-selector-container"
        style={{ position: "absolute", right: 21, bottom: 190, zIndex: 10 }}
      >
        <TouchableHighlight
          testID="poi-filter-button"
          style={[
            styles?.shadow, // Added optional chaining
            {
              backgroundColor: theme?.backgroundColor, // Added optional chaining
              borderRadius: 50,
              padding: 10,
...
                  color: "white",
                  textAlign: "center",
                  fontWeight: "bold",
                  fontSize: textSize,
                }}
              >
                Apply Filters
              </Text>
            </TouchableHighlight>
          </View>
        </Animated.View>
      </Animated.View>
    </>
...
