...
          </TouchableOpacity>
          <Text style={[styles.userName, { fontSize: 26 }]} className="text-white text-3xl font-medium">{userName}</Text>
        </View>

        {/* Settings Section */}
        <View style={[styles.content, { backgroundColor: "#FFFFFF" }]} className="-mt-6 rounded-t-3xl px-6 pt-6 pb-24">
          <Text style={[styles.userName, { fontSize: textSize }]} className="text-2xl font-bold mb-6">Accessibility Settings</Text>

          {/* Mobility Settings */}
          <SettingToggle 
          label="Mobility disability"
          description="Enable features optimized for wheelchair users."
          value={isWheelchairAccessEnabled}
...
    
            <Text style={{ fontSize: tempSize }} className="text-gray-900 mb-2">Preview text size</Text>
          </View>

          {/* Apply Button */}
          <ActionButton 
          label="Apply Changes" 
          onPress={applyChanges} 
          theme={theme} 
          textSize={textSize}
          />

          {/* Logout Button */}
...
