export const buildings = [
    {
        name: "Hall Building",
        start_floor: "Hall 1",
        floors: [
            {
                "name":"Hall 9",
                "url": "https://app.mappedin.com/map/67d7285c3b90e4000beb55d5/directions?kiosk=false&outdoors=false",
                "floor_id":"m_ff2c8c646277c61e",
                "entrance":"45.497310869658996%2C-73.5787282015637%2Cm_ff2c8c646277c61e",
                "rooms": {
                    "H917": "s_7e282b843c0f8a66",
                    "H963": "s_dc36b55ee3eb5c3a"
                }
            },
            {
                "name":"Hall 8",
                "url": "https://app.mappedin.com/map/67d7285c3b90e4000beb55d5/directions?kiosk=false&outdoors=false",
                "floor_id":"m_44207d0e6e32eac8",
                "entrance":"45.49724231754862%2C-73.57910318979897%2Cm_44207d0e6e32eac8",
                "rooms": {
                    "H809": "s_f79cb93ae628833c",
                    "H815": "s_adee63f7d4d4f772",
                    "H849": "s_46120eef38d0b708"
                }
            },
            {
                "name":"Hall 1",
                "url": "https://app.mappedin.com/map/67d7285c3b90e4000beb55d5/directions?kiosk=false&outdoors=false",
                "floor_id":"m_a14d6eee24abdc1a",
                "exit": "45.497306310248916%2C-73.5786979551609%2Cm_a14d6eee24abdc1a",
                "entrance":"45.49700962858394%2C-73.57864498620205%2Cm_a14d6eee24abdc1a",
                "rooms": {
                    "H110": "s_e2338f7e63930230"
                }
            }
        ],
    },
    {
        name: "SP Building",
        start_floor: "SP 1",
        floors: [
            {
                "name":"SP 1",
                "url":"https://app.mappedin.com/map/67d88e2581104a000b6df10e/directions?embedded=true&outdoors=false&kiosk=false",
                "floor_id":"m_00a45bb03dc793b9",
                "entrance":"45.4583718018728%2C-73.64074551435993%2Cm_00a45bb03dc793b9",
                "rooms": {
                  "CC124": "s_411f8b3269cea1be",
                  "CC122": "s_2e19aa43676ec0b1",
                  "CC120": "s_9287cf4dd891b79a",
                  "CC118": "s_44900512ccdb04b0",
                  "CC116": "s_5ebd4db1734e60f6",
                  "CC112": "s_929b5d3a8638066b",
                  "CC106": "s_fb7e57cfad19eb3d"
                }
            }
        ]
    },
    {
        name: "MB Building",
        start_floor: "MB 1",
        floors: [
            {
                "name":"MB 1",
                "url":"https://app.mappedin.com/map/67d891f2f63286000bb80faa/directions?outdoors=false&kiosk=false",
                "floor_id":"m_de096849e2569e48",
                "outdoor_entrance":"45.495518682131724%2C-73.57924820743247%2Cm_de096849e2569e48",
                "entrance": "45.495432170293526%2C-73.5790763159181%2Cm_de096849e2569e48",
                "disabled_entrance": "45.49528065258637%2C-73.57903996902161%2Cm_de096849e2569e48",
                "rooms": {
                "MB1.101": "s_1272ecb3d499fea1",
                "MB1.210": "s_5348bdea866d2279",
                "MB1.132": "s_91a21603ca8d9e5c",
                "MB1.103": "s_674c1b5f966bf464",
                "MB1.110": "s_a888db2ac44c0dce",
                "MB1.106": "s_34cc77e913f1a934",
                "MB1.125": "s_8d14d98fa64d8d88"
                }
            },
            {
                "name":"MB S2",
                "url":"https://app.mappedin.com/map/67d891f2f63286000bb80faa/directions?embedded=true&outdoors=false&kiosk=false",
                "floor_id":"m_4dd8d7523b50f27a",
                "entrance":"45.49544405162153%2C-73.57906807434307%2Cm_4dd8d7523b50f27a",
                "outdoor_entrance":"45.49555319113399%2C-73.5786154102396%2Cm_4dd8d7523b50f27a",
                "disabled_entrance":"45.49528554612414%2C-73.57903788793377%2Cm_4dd8d7523b50f27a",
                "rooms": {
                "MBS2.210": "s_c0d60f94f2a5c69e",
                "MBS2.225": "s_636eadb4ea0be9cf",
                "MBS2.235": "s_dd980e94bf3b836c",
                "MBS2.230": "s_911ae8f281dc315d",
                "MBS2.170": "s_dc5193bc7e83b6bd",
                "MBS2.140": "s_e3f4fd3a15de757a",
                "MBS2.130": "s_4b9db910a637656b"
                }
            
            }
        ]
    }
]

