...
        </Pressable>

        {/* Indoor navigation Button: Navigate to indoor navigation screen */}
        <Pressable
          onPress={() => navigateTo("InDoorScreen")}
          style={styles.navButton}
          testID="nav-indoor"
        >
          {currentScreen === "InDoorScreen" ? (
            <BuildingActive />
          ) : (
            <BuildingInactive />
          )}
...
